tests/syntax_error/typedef_missing_eq.jou
typedef lol int  # Error: expected '=' between name and type, got the 'int' keyword
